tests/macros/unknown/kind.stderr
error: unknown question kind unknown
 --> $DIR/kind.rs:2:37
  |
2 |     let q = inquisition::questions![unknown {}];
  |                                     ^^^^^^^
