tests/macros/unknown/kind.rs
fn main() {
    let q = inquisition::questions![unknown {}];
}
